src/test/ui/unsafe/issue-45087-unreachable-unsafe.rs
fn main() {
    return;
    *(1 as *mut u32) = 42;
    //~^ ERROR dereference of raw pointer is unsafe
}
